testdata/invalid/invalid_union_missing_arrow.bop
union U {
    1 struct A{};
}